force-app/main/default/objects/Project__c/fields/GitHub_Repo_Path__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Repo_Path__c</fullName>
    <description>owner/repo format used for GitHub API calls, e.g. abharat1/TFAcrobot</description>
    <label>GitHub Repo Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>