force-app/main/default/objects/Project__c/fields/Last_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Commit_Date__c</fullName>
    <label>Last Commit Date</label>
    <type>DateTime</type>
    <description>Populated by GitHubCalloutService</description>
</CustomField>