force-app/main/default/objects/Project__c/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <label>Primary Language</label>
    <type>Text</type>
    <length>50</length>
</CustomField>