force-app/main/default/objects/Project__c/fields/Star_Count__c.field-meta.xml
<CustomField>
    <fullName>Star_Count__c</fullName>
    <label>Star Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Populated by GitHubCalloutService</description>
</CustomField>