force-app/main/default/objects/Project__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <label>Tech Stack</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated tags, e.g. Apex,LWC,Integration</description>
</CustomField>